--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "notepadsimplelinux"
 version = "0.1.0"
-description = "Add your description here"
+description = "Bloco de notas simples para Linux"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
